--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/serve-static": "^2.1.3",
     "axios": "^0.21.0",
     "cheerio": "^1.0.0-rc.3",
+    "needle": "^2.5.2",
+    "node-fetch": "^2.6.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3"
